--- a/index.html
+++ b/index.html
@@ -5,59 +5,64 @@
     <title>Dan's Portfolio</title>
     <link
         rel="stylesheet"
-        href="./style.css"
+        href="style.css"
     />
 </head>
 <body>
-    <h1 class="main">Dinh Tat Dat</h1>
+    <h1 class="main">DINH TAT DAT</h1>
     <img src="./assets/images/dat.jpg" height="300" alt="self avatar"/>
-    <h2>Summary</h2>
-    <p>I am a hard working and reliable person. I am passionate in arts as bartending, design and guest service</p>
+    <h2 class="main">Summary</h2>
+    <p class="tag" id="italic">I am a hard working and reliable person. I am passionate in arts as bartending, design and guest service</p>
 <hr/>
-    <h2>Education</h2>
+    <h2 class="main">Education</h2>
     <ul>
-        <li>Graduated Hotel and Restaurant Management at Hoa Sen University. GPA: 2.8</li>
-        <li>Certificated Bartending course at Nguyen Truong To College</li>
-        <li>Finish Web Design online course at Udemy</li>
+        <li class="tag">Graduated Hotel and Restaurant Management at Hoa Sen University. GPA: 2.8</li>
+        <li class="tag">Certificated Bartending course at Nguyen Truong To College</li>
+        <li class="tag">Finish Web Design online course at Udemy</li>
     </ul>
 <hr/>
-    <h2>Work Experience</h2>
+    <h2 class="main">Work Experience</h2>
     <ul>
-        <li><h3>[ Head Bartender ] at 4.4.4 Cocktail Lovers Dalat</h3></li>
-        Nov, 2023 - Feb, 2024
-        <li><h3>[ Senior Bartender ] at Gemination Eatery & Bar Dalat</h3></li>
-        July, 2023 - Nov,2023
-        <li><h3>[ Bartender ] at On The Rocks Dalat</h3></li>
-        May, 2023 - July, 2023
-        <li><h3>[ Bar Supervisor ] at Ministry of Men Saigon</h3></li>
-        Oct, 20201 - April, 2023
-        <li><h3>[ Senior Receptionist ] at Grand Hotel Saigon</h3></li>
-        Jan, 2018 - July, 2020
+        <li class="tag1"><h3>[ Head Bartender ] at 4.4.4 Cocktail Lovers Dalat</h3></li>
+        <p class="tag">Nov, 2023 - Feb, 2024</p>
+        <li class="tag1"><h3>[ Senior Bartender ] at Gemination Eatery & Bar Dalat</h3></li>
+        <p class=tag>July, 2023 - Nov,2023</p>
+        <li class="tag1"><h3>[ Bartender ] at On The Rocks Dalat</h3></li>
+        <p class=tag>May, 2023 - July, 2023</p>
+        <li class="tag1"><h3>[ Bar Supervisor ] at Ministry of Men Saigon</h3></li>
+        <p class="tag">Oct, 20201 - April, 2023</p>
+        <li class="tag1"><h3>[ Senior Receptionist ] at Grand Hotel Saigon</h3></li>
+        <p class="tag">Jan, 2018 - July, 2020</p>
     </ul>
 <hr/>
-    <h2>Skills</h2>
+    <h2 class="main">Skills</h2>
     <ul>
-        <li>English Communication skills: Excellent</li>
-        <li>Guest service: Excellent</li>
-        <li>Microsoft Office suite: Good</li>
-        <li>Organizational skills: Good</li>
-        <li>Problem Solving skill: Good</li>
+        <li class="tag1"><h3>English Communication skills:</h3></li>
+        <p class="ex">Excellent</p>
+        <li class="tag1"><h3>Guest service:</h3></li>
+        <p class="ex">Excellent</p>
+        <li class="tag1"><h3>Microsoft Office suite:</h3></li>
+        <p class="ok">Good</p>
+        <li class="tag1"><h3>Organizational skills:</h3></li>
+        <p class="ok">Good</p>
+        <li class="tag1"><h3>Problem Solving skill:</h3></li>
+        <p class="ok">Good</p>
     </ul>
 <hr/>
-    <h2>Awards and Certifications</h2>
+    <h2 class="main">Awards and Certifications</h2>
     <ul>
-        <li>Employee of the month at Ministry of Men over 3 continuous months</li>
-        <li>Project Management for Bar constructions at Ministry of Men</li>
-        <li>Menu Development for 4.4.4 Cocktail Lovers and Gemination Eatery & Bar</li>
+        <li class="tag">Employee of the month at Ministry of Men over 3 continuous months</li>
+        <li class="tag">Project Management for Bar constructions at Ministry of Men</li>
+        <li class="tag">Menu Development for 4.4.4 Cocktail Lovers and Gemination Eatery & Bar</li>
     </ul>
 <hr/>
-    <h2>Other</h2>
+    <h2 class="main">Other</h2>
     <ul>
         <li><a href="./public/aboutme.html">My Hobbies</a></li>
         <li><a href="./public/contactme.html">Contact Me</a></li>
     </ul>
 <footer>
-    <p>© 2024 Dinh Tat Dat. All Rights Reserved</p>
+    <p class="tag">© 2024 Dinh Tat Dat. All Rights Reserved</p>
 </footer>
 </body>
 </html>
